--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,13 +28,12 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - name: Make envfile
-      uses: SpicyPizza/create-envfile@v1.3
       with:
         envkey_DEBUG: false
         envkey_SOME_API_KEY: "123456abcdef"
         envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
         some_other_variable: foobar
-        directory: <directory_name>
+        directory: ..
         file_name: .env
         fail_on_empty: false
     - run: npm run start
