--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,21 +1,20 @@
-name: Create envfile
+name: Shell Commands
 
-on: [ push ]
+on: [push]
 
 jobs:
-
-  create-envfile:
- 
+  run-shell-command:
     runs-on: ubuntu-latest
- 
     steps:
-    - name: Make envfile
-      uses: SpicyPizza/create-envfile@v1.3
-      with:
-        envkey_DEBUG: false
-        envkey_SOME_API_KEY: "123456abcdef"
-        envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        some_other_variable: foobar
-        directory: .
-        file_name: .env
-        fail_on_empty: false
+      - name: echo a string
+        run: echo "Hello world"
+      - name: multiline script
+        run: |
+          node -v
+          npm -v
+      - name: python Command
+        run: |
+          import platform
+          print
+          (platform.processor())
+        shell: python  
