--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,10 +18,16 @@ jobs:
           echo "${{ github.token }}"
       - uses: actions/checkout@v1
       
-      - name: set environment variables
-        uses: allenevans/set-env@v2.0.0
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
         with:
-          TOKEN_SECRET: 'myAppSuperSecret!'
+          envkey_DEBUG: false
+          envkey_SOME_API_KEY: "123456abcdef"
+          envkey_SECRET_KEY: ${{ secrets.TOKEN_SECRET }}
+          some_other_variable: foobar
+          directory: .
+          file_name: .env
+          fail_on_empty: false
 
       - name: Printenv
         run: |
