--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,8 +49,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+    - run: |
+        npm run build --if-present
+        echo "SECRET_TOKEN=TEST" >> .env
     - run: npm start
 
   some-checks:
