--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,35 +7,6 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  first-create-env:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Listing some variables
-        run: |
-          echo $GITHUB_SHA
-          echo $GITHUB_REPOSITORY
-          echo $GITHUB_WORKSPACE
-          echo "${{ github.token }}"
-          echo "SECRET_TOKEN=TEST" >> .env
-          ls -l
-      - uses: actions/checkout@v1
-      
-      - name: Make envfile
-        uses: SpicyPizza/create-envfile@v1.3
-        with:
-          envkey_DEBUG: false
-          envkey_SOME_API_KEY: "123456abcdef"
-          envkey_SECRET_KEY: ${{ secrets.TOKEN_SECRET }}
-          some_other_variable: foobar
-          directory: .
-          file_name: .env
-          fail_on_empty: false
-
-      - name: Printenv
-        run: |
-          echo "TOKEN_SECRET=${TOKEN_SECRET}"
-          printenv
-
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -50,19 +21,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: |
-        npm run build --if-present
+        npm install
         echo "SECRET_TOKEN=TEST" >> .env
     - run: |
         echo "SECRET_TOKEN=TEST" >> .env
         ls -l
         npm start
-
-  some-checks:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: List Files
-        run: |
-          pwd
-          ls
