--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,7 @@ jobs:
         cache: 'npm'
     - run: |
         npm install
-        echo "SECRET_TOKEN = TEST" >> .env
+        echo "TOKEN_SECRET = TEST" >> .env
         cat .env
     - run: |
         cat .env
