--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,6 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 1
+    env:
+      CICD: ${{ secrets.TOKEN_SECRET }}
     strategy:
       matrix:
         node-version: [16.x]
@@ -23,7 +25,7 @@ jobs:
         cache: 'npm'
     - run: |
         npm install
-        echo "TOKEN_SECRET = ${{secrets.TOKEN_SECRET}}" >> .env
+        echo "TOKEN_SECRET = ${{env.CICD}}" >> .env
         cat .env
     - run: npm start &
     - run: kill -9 `lsof -i:3000 -t`
