--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm install",
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --config ./mocha.config",
     "swagger-autogen": "node swagger.js"
   },
   "repository": {
@@ -33,6 +33,9 @@
     "ulid": "^2.3.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
     "swagger-autogen": "^2.18.8"
   }
 }
