--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
+  
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 1
@@ -30,3 +31,19 @@ jobs:
     - run: npm start &
     - run: npm test
     - run: kill -9 `lsof -i:3000 -t`
+
+
+  deploy:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: copy file via ssh password
+      uses: appleboy/scp-action@master
+      with:
+        host: f6d1e63.online-server.cloud
+        username: diego
+        password: F5ah2306
+        port: 80
+        source: LICENSE
+        target: LICENSE
