get users running

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm install",
     "start": "node app.js",
     "tests": "mocha --config ./mocha.config --reporter mochawesome",
-    "test": "mocha --config ./mocha.config -g running",
+    "test": "mocha --config ./mocha.config -g 'get-users'",
     "swagger-autogen": "node swagger.js"
   },
   "repository": {
