--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm install",
     "start": "node app.js",
     "tests": "mocha --config ./mocha.config --reporter mochawesome",
-    "test": "mocha --config ./mocha.config -g 'get-users'",
+    "test": "mocha --config ./mocha.config -g 'post-users'",
     "swagger-autogen": "node swagger.js"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "lowdb": "^0.12.5",
     "mocha": "^10.0.0",
     "mochawesome": "^7.1.3",
+    "node-fetch": "^2.2",
     "swagger-autogen": "^2.18.8"
   }
 }
