--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
         echo "TOKEN_SECRET = ${{env.CICD}}" >> .env
         cat .env
     - run: npm start &
-    - run: npm test
+    - run: npm tests
     - run: kill -9 `lsof -i:3000 -t`
     - run: cat .env
 
