--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,6 +1,6 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-name: Node.js CI
+name: E2E CI
 on:
   push:
     branches: [ main ]
@@ -15,7 +15,7 @@ jobs:
       CICD: ${{ secrets.TOKEN_SECRET }}
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [15.x,15.x,16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
     - uses: actions/checkout@v3
@@ -29,7 +29,7 @@ jobs:
         echo "TOKEN_SECRET = ${{env.CICD}}" >> .env
         cat .env
     - run: npm start &
-    - run: npm run tests:i
+    - run: npm run tests:e2e
     - run: kill -9 `lsof -i:3000 -t`
     - run: cat .env
 
