--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,6 +1,6 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-name: Node.js CI
+name: Integration CI
 on:
   push:
     branches: [ main ]
@@ -15,7 +15,7 @@ jobs:
       CICD: ${{ secrets.TOKEN_SECRET }}
     strategy:
       matrix:
-        node-version: [15.x,15.x,16.x]
+        node-version: [14.x,15.x,16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
     - uses: actions/checkout@v3
